# gestao_queroser

./: .editorconfig  .env.example  .gitignore  ANALISE_CUSTOS.md  CHANGELOG_SETUP.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GRATUITO.md  Dockerfile  GITHUB_SETUP_CHECKLIST.md  LICENSE  PRODUCAO.md  PRODUCAO_CHECKLIST.md  PROFISSIONAL_STATUS.txt  PROJETO_OVERVIEW.txt  Procfile  QUICKSTART.md  README.md  RESUMO_PROFISSIONALIZACAO.md  db.sqlite3  docker-compose.yml  init_db.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: django-ci.yml
academico/: admin.py  apps.py  models.py  signals.py  widgets.py
academico/migrations/: 0001_initial.py  0002_turma.py  0003_aula.py  0004_aluno_foto_alter_aluno_id_alter_aula_id_and_more.py
academico/static/admin/js/: admin_camera.js
core/: admin.py  settings.py  urls.py
core/templates/admin/: index.html
financeiro/: admin.py  models.py
financeiro/migrations/: 0001_initial.py
patrimonio/: admin.py  models.py
patrimonio/migrations/: 0001_initial.py
